--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,14 @@
     <h1>My Cart</h1>
   </header>
 
+<% if enhanced_cart.empty? %>
+
+<div class="alert alert-info" role="alert">
+Your cart is currently empty. <%= link_to 'Continue shopping', :root %>
+</div>
+
+<% else %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +56,5 @@
       <% end %>
     </div>
   </div>
-
+<% end %>
 </section>
