added condition for sold out alert on products

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,6 +17,13 @@
     <% end %>
   </footer>
 
+  <% if product.quantity == 0 %>
+  <aside class="sold-out">
+SOLD OUT!
+</aside>
+
+<% end %>
+
   <aside class="price">
     <%= number_to_currency(product.price) %>
   </aside>
