--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,19 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.sold-out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: rgb(222, 139, 139);
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 15px;
+        font-size: 0.8em;
+        font-weight: 500;
+        color: white;
+      }
+
       &:hover {
 
         border-color: #999;
