--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,10 +4,37 @@
     <h1>Order #<%= @order.id %></h1>
   </header>
 
-  <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
-  </div>
+<div class="panel panel-default items">
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Quantity</th>
+      <th>Product Image</th>
+      <th>Name</th>
+      <th>Product Description</th>
+      <th>Product Total</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @order.line_items.each do |item| %>
+    <%= render 'order', item: item %>
+  <% end %>
+</tbody>
+  <tfoot>
+    <tr>
+      <th colspan="4">
+        ORDER TOTAL:
+      </th>
+      <th>
+      <h4 style="text-align: right"><%= number_to_currency(@order.total_cents / 100.0) %></h4>
+      </th>
+    </tr>
+  </tfoot>
+</table>
+</div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
+
+
